Fix character: name too big, image looking too small on some screens

--- a/src/entry.scss
+++ b/src/entry.scss
@@ -51,24 +51,24 @@
         @apply shadow-md h-full rounded-lg flex;
     }
     .character-image {
-        @apply w-3/6 h-full rounded-l-md object-contain;
+        @apply w-3/6 h-full rounded-l-md object-cover;
         @screen md {
-            @apply w-1/3;
+            @apply w-1/3 rounded-l-md;
         }
     }
     .character-information {
-        @apply text-sm text-gray-700 px-4 py-2;
+        font-size: 12px;
+        @apply text-sm text-gray-700 pl-4 py-2;
         @screen lg {
             @apply px-8 text-lg;
         }
         .character-name {
-            @apply font-semibold text-lg;
+            @apply font-semibold text-sm;
             @screen lg {
                 @apply text-3xl;
             }
         }
         .favorite-button {
-            @apply p-2;
             &:focus {
                 @apply outline-none;
             }
