--- a/src/tailwind.scss
+++ b/src/tailwind.scss
@@ -706,18 +706,22 @@ video {
     height: 100%;
     border-top-left-radius: 0.375rem;
     border-bottom-left-radius: 0.375rem;
-    object-fit: contain;
+    object-fit: cover;
     @media (min-width: 768px) {
       width: 33.333333%;
+
+      border-top-left-radius: 0.375rem;
+
+      border-bottom-left-radius: 0.375rem;
     }
   }
   .character-information {
+    font-size: 12px;
     font-size: 0.875rem;
     --text-opacity: 1;
     color: #4a5568;
     color: rgba(74, 85, 104, var(--text-opacity));
     padding-left: 1rem;
-    padding-right: 1rem;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     @media (min-width: 1024px) {
@@ -729,13 +733,12 @@ video {
     }
     .character-name {
       font-weight: 600;
-      font-size: 1.125rem;
+      font-size: 0.875rem;
       @media (min-width: 1024px) {
         font-size: 1.875rem;
       }
     }
     .favorite-button {
-      padding: 0.5rem;
       &:focus {
         outline: 0;
       }
